fixed align icons

--- a/src/components/Blog/blog.module.scss
+++ b/src/components/Blog/blog.module.scss
@@ -77,6 +77,7 @@ $avatarWidth: 15%;
   margin-right: 16px;
   font-size: 20px;
   color: $lightGray;
+  position: relative;
 }
 
 .sectionLinksWrap {
@@ -108,6 +109,16 @@ $avatarWidth: 15%;
   font-style: italic;
 }
 
-.smallerIcon {
+.fbIcon {
   font-size: 18px;
+  top: -3px;
+}
+
+.linkedInIcon {
+  top: -1px;
+  font-size: 22px;
+}
+
+.twitterIcon {
+  top: -1px;
 }
